:bug: table row overflow (material-ui :bug:)

--- a/public/index.styl
+++ b/public/index.styl
@@ -69,6 +69,12 @@ code
 :global(.markdown-editor__textarea)
     font-size 1em
 
+// FIXME: https://github.com/callemall/material-ui/issues/5163
+// @stylint off
+td
+    overflow hidden
+// @stylint on
+
 /* Keyframes */
 
 // copied from https://github.com/daneden/animate.css/blob/master/source/attention_seekers/bounce.css
